# OpenGLTextRendering

./: .gitignore  CMakeLists.txt  README.md  build_debug.bat  build_release.bat
assets/: font_credit.txt  save  text.frag  text.vert
src/: font.cpp  font.h  io.h  main.cpp  shader.h
